fixed header spacing issue

--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
         background-repeat: no-repeat;
         background-position: center;
         height: 0;
-        padding: 5%;
-        width: 98%;
+        padding: 5% 0;
+        width: 100%;
         margin: 0 auto 20px auto;
     }
     
